# grpc-tonic

./: Cargo.toml  README.md  build.rs
.autometrics/prometheus/data/01HDYT2QSYCHZ6D1TGQE2VTG6R/: index  meta.json
.autometrics/prometheus/data/01HDYT2QSYCHZ6D1TGQE2VTG6R/chunks/: 000001
.autometrics/prometheus/data/01HDYVMT20Z9M3Z6K4E6JHR42J/: index  meta.json
.autometrics/prometheus/data/01HDYVMT20Z9M3Z6K4E6JHR42J/chunks/: 000001
.autometrics/prometheus/data/01HDYVMV4EMAQKX7FH4XJSJFAH/: index  meta.json
.autometrics/prometheus/data/01HDYVMV4EMAQKX7FH4XJSJFAH/chunks/: 000001
.autometrics/prometheus/data/wal/: 00000000  00000001  00000025  00000026  00000027  00000028
.autometrics/prometheus/data/wal/checkpoint.00000024/: 00000000
proto/: job.proto
proto/helloworld/: helloworld.proto
proto/job/: job.proto
proto/streaming/: streaming.proto
src/: server.rs
src/helloworld/: client.rs  server.rs
src/job/: client.rs  server.rs
src/streaming/: client.rs  server.rs
