[package]
name = "grpc-tonic"
version = "0.1.0"
edition = "2021"

# cargo run --bin job-server 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "job-server"
path = "src/job/server.rs"

# cargo run --bin job-client 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "job-client"
path = "src/job/client.rs"

[dependencies]
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
axum = "0.6.20"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"


[build-dependencies]
tonic-build = "0.10.2"
