[package]
name = "grpc-tonic"
autor = "felix figueroa"
email = "felixmanuelfigueroa@gmail"
version = "0.1.0"
edition = "2021"

# cargo run --bin helloworld-server 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/helloworld/server.rs"

# cargo run --bin helloworld-client 
[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/helloworld/client.rs"

# cargo run --bin job-server 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "job-server"
path = "src/job/server.rs"

# cargo run --bin job-client 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "job-client"
path = "src/job/client.rs"

# cargo run --bin streaming-server 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "streaming-server"
path = "src/streaming/server.rs"

# cargo run --bin streaming-client 
[[bin]] # Bin to run the HelloWorld gRPC server
name = "streaming-client"
path = "src/streaming/client.rs"

[dependencies]
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
axum = "0.6.20"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"

# streaming
async-stream = "0.3.5"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio-stream = "0.1.14"


# build-compiler
[build-dependencies]
tonic-build = "0.10.2"
